fix cropping filter

--- a/static/sass/whoosh.sass
+++ b/static/sass/whoosh.sass
@@ -180,7 +180,7 @@ label[for="id_user_agent"]
 .whoosh-viewer
   font-size: 1rem
   video
-    max-width: 100%
+    max-height: 40rem
     font-size: 1rem
 
   .expiration
